<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".New_task">

    <Button
        android:id="@+id/newTask_backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:drawableStart="@drawable/ic_back"
        android:text="@string/ch_tw_cancelBtn"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/newTask_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch_tw_newTask_header"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/separator"
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:background="@android:color/black"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/newTask_listContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/newTask_title"
                    android:layout_width="380dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="13dp"
                    android:autofillHints="@string/ch_tw_newTask_title"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/ch_tw_newTask_title"
                    android:inputType="text"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:selectAllOnFocus="false"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/newTask_list_Head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/ch_tw_newTask_list_head"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/newTask_classContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/newTask_list_addListBtn"
                    android:layout_width="380dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="5dp"
                    android:autofillHints="@string/ch_tw_newTask_list_newList"
                    android:background="@drawable/rounded_edittext"
                    android:drawableEnd="@drawable/ic_addbox"
                    android:ems="10"
                    android:hint="@string/ch_tw_newTask_list_newList"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:textAlignment="textStart"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/newTask_setup_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/ch_tw_newTask_startSetting"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/newTask_setup_timeDate"
                    android:layout_width="380dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="5dp"
                    android:autofillHints="@string/ch_tw_newTask_startSetting_timeDate"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/ch_tw_newTask_startSetting_timeDate"
                    android:inputType="date"
                    android:paddingStart="10dp"
                    android:paddingEnd="40dp"
                    android:selectAllOnFocus="false"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/newTask_class_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/ch_tw_newTask_classSetting"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/newTask_class_chooseClassBtn"
                android:layout_width="380dp"
                android:layout_height="40dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_edittext"
                android:drawableEnd="@drawable/ic_addbox"
                android:hint="@string/ch_tw_newTask_classSetting_add"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAlignment="textStart"
                android:textColor="#909090"
                android:textSize="17sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/newTask_doneBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ch_tw_newTask_confirmTask"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952"/>

</androidx.constraintlayout.widget.ConstraintLayout>